# cnc-4-science

./: .gitignore  CHANGELOG.md  README.md  cnc_machine.py  cnc_machine_test.py  pyproject.toml
examples/startup/: hardware_check.py
fraction_collector/: __init__.py  fraction_collector.py
fraction_collector/deck/: cnc_deck_definition.json
fraction_collector/protocols/: example_protocol.py
fraction_collector/tools/: drop_counter.py  tool_definitions.json  vacuum_gripper.py  vial_capper.py
labware/: vialtrayholder_25_tuberack_1000ul.f3d  vialtrayholder_25_tuberack_1000ul.json  vialtrayholder_25_tuberack_1000ul.stl
src/cnc_machine_core/: __init__.py  cnc_deck.py  cnc_machine.py  deck_state.py
src/cnc_machine_core/deck/: cnc_deck_definition.json  cnc_open.json
src/cnc_machine_core/labware/: custom_hplctray_35_tuberack_10ul.json  vialcapholder_54_tuberack_10ul.json  watershplc_48_tuberack_50ul.json
templates/starter_app/presets/: deck_preset.yaml
templates/starter_app/protocols/: simple_well_cycle.py  z_helper.py
templates/starter_app/tools/: tool_definitions.json  vacuum_gripper.py
tests/: test_cnc_machine.py
tests/fixtures/: test_locations.yaml
