[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnc-machine-core"
version = "0.1.0"
description = "Core CNC machine control module"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml",
  "pyserial",
]

[tool.setuptools]
py-modules = ["cnc_machine"]
